export CSV, Excel, Pdf file

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -66,71 +66,47 @@
 	<div>
 		<h2>Manage Users</h2>
 		<a th:href="@{/users/newUser}">Create New User</a>
+		&nbsp;|&nbsp;
+		<a th:href="@{/users/export/csv}">Export to CSV</a>
+		&nbsp;|&nbsp;
+		<a th:href="@{/users/export/excel}">Export to Excel</a>
+		&nbsp;|&nbsp;
+		<a th:href="@{/users/export/pdf}">Export to PDF</a>
 	</div>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
 	
 	<div>
+	     <form th:action="@{/users/page/1}" class="form-inline m-3">
+	          <input type="hidden" name="sortField" th:value="${sortField}" />
+	          <input type="hidden" name="sortOrder" th:value="${sortOrder}" />
+	          
+	          Filter:&nbsp;
+	          <input type="search" name="keyword" th:value="${keyword}" class="form-control" required="required" />
+	          &nbsp;&nbsp;
+	          <input type="submit" value="Search" class="btn btn-primary" />
+	          &nbsp;&nbsp;
+	          <input type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()" />
+	     </form>
+	</div>
+	
+	<div>
 	    <table class="table table-bordered table-striped table-hover table-reponsive-xl">
 	         <thead class="thead-dark">
 	             <tr>
-	                  <th>
-	                      <a th:if="${sortField != 'id'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortOrder=' + ${sortOrder}}">
-	                         User ID
-	                      </a>
-	                      <a th:if="${sortField == 'id'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortOrder=' + ${reverseSortOrder}}">
-	                         User ID
-	                      </a>
-	                      <span th:if="${sortField == 'id'}" th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-	                  </th>
+	                  <th th:replace="fragments :: column_link('id', 'User ID')"></th>
+	                  
 	                  <th>Photos</th>
-	                  <th>
-	                      <a th:if="${sortField != 'email'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortOrder=' + ${sortOrder}}">
-	                         Email
-	                      </a>
-	                      <a th:if="${sortField == 'email'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortOrder=' + ${reverseSortOrder}}">
-	                         Email
-	                      </a>
-	                      <span th:if="${sortField == 'email'}" th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-	                  </th>
-	                  <th>
-	                      <a th:if="${sortField != 'firstName'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortOrder=' + ${sortOrder}}">
-	                         First Name
-	                      </a>
-	                      <a th:if="${sortField == 'firstName'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortOrder=' + ${reverseSortOrder}}">
-	                         First Name
-	                      </a>
-	                      <span th:if="${sortField == 'firstName'}" th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-	                  </th>
-	                  <th>
-	                      <a th:if="${sortField != 'lastName'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortOrder=' + ${sortOrder}}">
-	                         Last Name
-	                      </a>
-	                      <a th:if="${sortField == 'lastName'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortOrder=' + ${reverseSortOrder}}">
-	                         Last Name
-	                      </a>
-	                      <span th:if="${sortField == 'lastName'}" th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-	                  </th>
+	                  
+	                  <th th:replace="fragments :: column_link('email', 'E-Mail')"></th>
+	                  
+	                  <th th:replace="fragments :: column_link('firstName', 'First Name')"></th>
+	                  
+	                  <th th:replace="fragments :: column_link('lastName', 'Last Name')"></th>
+	                 
 	                  <th>Roles</th>
-	                  <th>
-	                      <a th:if="${sortField != 'enabled'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortOrder=' + ${sortOrder}}">
-	                         Enabled
-	                      </a>
-	                      <a th:if="${sortField == 'enabled'}" class="text-white" 
-	                         th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortOrder=' + ${reverseSortOrder}}">
-	                         Enabled
-	                      </a>
-	                      <span th:if="${sortField == 'enabled'}" th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-	                  </th>
+	                  
+	                  <th th:replace="fragments :: column_link('enabled', 'Enabled')"></th>
 	                  <th></th>
 	             </tr>
 	         </thead>
@@ -175,31 +151,33 @@
 	        <span>No users found</span>
 	    </div>
 
-	    <div>
+		<div th:if="${totalPages > 1}">
 			<nav>
-				<ul class="pagination justify-content-center">
-				
-					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-					    <a class="page-link" th:href="@{'/users/page/1?sortField=' +${sortField} + '&sortOrder=' +${sortOrder}}">First</a>
+				<ul class="pagination justify-content-center flex-wrap">
+					<li
+						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+						<a th:replace="fragments :: page_link(1, 'First')"></a>
 					</li>
-					
-					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-					    <a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortOrder=' +${sortOrder}}">Previous</a>
+					<li
+						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+						<a
+						th:replace="fragments :: page_link(${currentPage - 1}, 'Previous')"></a>
 					</li>
-					
-					<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-					    th:each="i : ${#numbers.sequence(1, totalPages)}">
-					    <a class="page-link" th:href="@{'/users/page/' + ${i} + '?sortField=' + ${sortField} + '&sortOrder=' +${sortOrder}}">[[${i}]]</a>
+
+					<li
+						th:class="${currentPage != i ? 'page-item': 'page-item active'}"
+						th:each="i : ${#numbers.sequence(1, totalPages)}"><a
+						th:replace="fragments :: page_link(${i}, ${i})"></a></li>
+
+					<li
+						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+						<a th:replace="fragments :: page_link(${currentPage + 1}, 'Next')"></a>
 					</li>
-					
-					<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-					    <a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortOrder=' +${sortOrder}}">Next</a>
+
+					<li
+						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+						<a th:replace="fragments :: page_link(${totalPages}, 'Last')"></a>
 					</li>
-					
-					<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-					    <a class="page-link" th:href="@{'/users/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortOrder=' +${sortOrder}}">Last</a>
-					</li>
-					
 				</ul>
 			</nav>
 		</div>
@@ -240,6 +218,11 @@
 			$("#confirmModal").modal();
 		});
 	});
+	
+	function clearFilter(){
+		window.location = "[[@{/users}]]"
+	};
+	
 </script>
 
 </body>
