--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/error/500.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/error/500.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-
-<head th:replace="fragments :: page_head('Home - Shopme Admin')"></head>
+<head th:replace="fragments :: page_head('Error - Shopme Admin')"></head>
 
 <body>
 
@@ -9,11 +8,8 @@
     
     <div th:replace="navigation :: menu"></div>
     
-	<div>
-		<h2>Shopme Control Panel</h2>
-		Welcome
-		<a th:href="@{/account}" sec:authentication="principal.fullname"></a>
-		<span sec:authentication="principal.authorities"></span>
+	<div class="m-3">
+	    <h2>Sorry, the server has encountered an error while processing your request</h2>
 	</div>
 	
 	<div th:replace="fragments :: footer"></div>
