--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -1,65 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-    <title>[[${pageTitle}]]</title>
-    
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" ></script>
-</head>
+<head th:replace="fragments :: page_head(${pageTitle})"></head>
+
 <body>
 
 <div class="container-fluid">
-    <div>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/ShopmeAdminSmall.png}" />
-            </a> 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-            <div class="collapse navbar-collapse" id="topNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/users}">Users</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/categories}">Categories</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/brands}">Brands</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/products}">Products</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/customers}">Customers</a>
-                    </li> 
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}">Orders</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/report}">Sales Report</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/articles}">Articles</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menus}">Menus</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/settings}">Settings</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+    <div th:replace="navigation :: menu"></div>
 	<div>
 		<h2>Manage Users | [[${pageTitle}]]</h2>
 	</div>
@@ -155,43 +102,12 @@
 		</div>
 	</div>
 	
-	<div class="text-center">
-		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
-	</div>
+	<div th:replace="fragments :: footer"></div>
+	
 </div>
 
-<script type="text/javascript">
-     $(document).ready(function() {
-    	$("#buttonCancel").on("click", function() {
-    		window.location = "[[@{/users}]]";
-    	});
-    	
-    	$("#fileImage").change(function() {
-    		// lay ra size cua file anh duoc upload
-    		fileSize = this.files[0].size;
-    		
-    		// kich thuoc file anh khong duoc > 1 MB = 1024^2 B = 1048576 B
-    		if(fileSize > 1048576) {
-    			this.setCustomValidity("You must choose an image  less than 1MB!");
-    			this.reportValidity();
-    		} else{
-    			this.setCustomValidity("");
-    			showImageThumbnail(this);
-    		}
-    	}); 
-    	
-     });    
-     
-     function showImageThumbnail(fileInput) {
-    	 var file = fileInput.files[0];   // doi tuong file dau tien
-    	 var reader = new FileReader();
-    	 reader.onload = function(e) {
-    		$("#thumbnail").attr("src", e.target.result);
-    	 };
-    	 
-    	 reader.readAsDataURL(file);
-     }
-     
+<script type="text/javascript">       
+     moduleURL = "[[@{/users}]]";
      function checkEmailUnique(form) {
     	 url = "[[@{/users/check_email}]]";
     	 // lay ra value cua email ta nhap trong form
@@ -224,17 +140,11 @@
     	 $("#modalTitle").text(title);
     	 $("#modalBody").text(message);
     	 $("#modalDialog").modal();
-     }
-     
+     } 
 </script>
+
+<script th:src="@{/js/common_form.js}"></script>
 
 </body>
 </html>
-
-
-
-
-
-
-
 
