--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -1,77 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Home - Shopme Admin</title>
-    
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/frontawesome/all.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
-    
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" ></script>
-</head>
+<head th:replace="fragments :: page_head('Users - Shopme Admin')"></head>
+
 <body>
 
 <div class="container-fluid">
-    <div>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/ShopmeAdminSmall.png}" />
-            </a> 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-            <div class="collapse navbar-collapse" id="topNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/users}">Users</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/categories}">Categories</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/brands}">Brands</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/products}">Products</a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/customers}">Customers</a>
-                    </li> 
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}">Orders</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/report}">Sales Report</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/articles}">Articles</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menus}">Menus</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/settings}">Settings</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+    <div th:replace="navigation :: menu"></div>
+    
 	<div>
 		<h2>Manage Users</h2>
-		<a th:href="@{/users/newUser}">Create New User</a>
-		&nbsp;|&nbsp;
-		<a th:href="@{/users/export/csv}">Export to CSV</a>
-		&nbsp;|&nbsp;
-		<a th:href="@{/users/export/excel}">Export to Excel</a>
-		&nbsp;|&nbsp;
-		<a th:href="@{/users/export/pdf}">Export to PDF</a>
+		<a th:href="@{/users/newUser}" class="fas fa-user-plus fa-2x icon-dark mr-2"></a>
+		&nbsp;&nbsp;
+		<a th:href="@{/users/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-2"></a>
+		&nbsp;&nbsp;
+		<a th:href="@{/users/export/excel}" class="fas fa-file-excel fa-2x icon-dark mr-2"></a>
+		&nbsp;&nbsp;
+		<a th:href="@{/users/export/pdf}" class="fas fa-file-pdf fa-2x icon-dark"></a>
 	</div>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
@@ -84,40 +29,42 @@
 	          Filter:&nbsp;
 	          <input type="search" name="keyword" th:value="${keyword}" class="form-control" required="required" />
 	          &nbsp;&nbsp;
-	          <input type="submit" value="Search" class="btn btn-primary" />
+	          <button type="submit" class="btn btn-primary">
+				  <i class="fas fa-search"></i>
+			  </button>
 	          &nbsp;&nbsp;
-	          <input type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()" />
+	          <button type="button" class="btn btn-secondary" onclick="clearFilter()">
+				  <i class="fas fa-eraser"></i>
+			</button>
 	     </form>
 	</div>
 	
-	<div>
+	<div class="full-details">
 	    <table class="table table-bordered table-striped table-hover table-reponsive-xl">
 	         <thead class="thead-dark">
 	             <tr>
-	                  <th th:replace="fragments :: column_link('id', 'User ID')"></th>
-	                  
+	                  <th class="hideable-column">
+	                      <th th:replace="fragments :: column_link('id', 'User ID', 'tag')"></th>
+	                  </th>
 	                  <th>Photos</th>
-	                  
-	                  <th th:replace="fragments :: column_link('email', 'E-Mail')"></th>
-	                  
-	                  <th th:replace="fragments :: column_link('firstName', 'First Name')"></th>
-	                  
-	                  <th th:replace="fragments :: column_link('lastName', 'Last Name')"></th>
-	                 
+	                  <th class="hideable-column">
+	                     <th th:replace="fragments :: column_link('email', 'E-Mail', 'tag')"></th>
+	                  </th>
+	                  <th th:replace="fragments :: column_link('firstName', 'First Name', 'none')"></th>
+	                  <th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')"></th>
 	                  <th>Roles</th>
-	                  
-	                  <th th:replace="fragments :: column_link('enabled', 'Enabled')"></th>
+	                  <th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')"></th>
 	                  <th></th>
 	             </tr>
 	         </thead>
 	         <tbody>
 	             <tr th:each="user : ${listUsers}">
-	                  <td>[[${user.id}]]</td>
+	                  <td class="hideable-column">[[${user.id}]]</td>
 	                  <td>
 	                      <span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-silver"></span>
 	                      <img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width: 90px" />
 	                  </td>
-	                  <td>[[${user.email}]]</td>
+	                  <td class="hideable-column">[[${user.email}]]</td>
 	                  <td>[[${user.firstName}]]</td>
 	                  <td>[[${user.lastName}]]</td>
 	                  <td>[[${user.roles}]]</td>
@@ -142,6 +89,24 @@
 	             </tr>
 	         </tbody>
 	    </table>
+	</div>
+	
+	<div class="less-details">
+		<div th:each="user : ${listUsers}" class="row m-1">
+			<div class="col-4">
+				<div th:replace="fragments :: user_photos" />			
+			</div>
+			<div class="col-8">
+				<div>[[${user.fullName}]]</div>
+				<div>[[${user.roles}]]</div>
+				<div class="mt-2">
+					<div th:replace="fragments :: user_status" />
+					&nbsp; 			
+					<div th:replace="fragments :: user_actions" />
+				</div>
+			</div>
+			<div>&nbsp;</div>
+		</div>
 	</div>
 	
 	    <div class="text-center m-1" th:if="${totalItems > 0}">
@@ -202,9 +167,8 @@
 		</div>
 	</div>
 	
-	<div class="text-center">
-		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
-	</div>
+	<div th:replace="fragments :: footer"></div>
+	
 </div>
 
 <script type="text/javascript">
