product detals, show product slide, search and paging using full-text-search

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/index.html
@@ -5,13 +5,14 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div th:replace= "navigation :: header_menu"></div>
+        <div th:replace="navigation :: header_menu"></div>
+        <div th:replace="navigation :: search_nav"></div>
         <div>
             <h1>Shopping by Categories</h1>
         </div>    
         <div class="row">
             <div class="col" th:each="category : ${listCategories}">
-                <div><img th:src="@{${category.imagePath}}" width="80" /></div>
+                <div><img th:src="@{${category.imagePath}}" width="90" /></div>
                 <div>
                     <a th:href="@{'/c/' + ${category.alias}}">[[${category.name}]]</a>
                 </div>
