--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -5,7 +5,7 @@
 	<div th:fragment="header_menu">
 		<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 			<a class="navbar-brand" th:href="@{/}"> <img th:src="@{/images/ShopmeAdminSmall.png}" /></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar, #searchNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="topNavbar">
@@ -32,6 +32,20 @@
 			</div>
 		</nav>
 	</div>
+    
+    <div th:fragment="search_nav" class="row">
+        <div class="col-md">
+            <nav class="navbar navbar-expand-sm bg-light">
+                <div class="collapse navbar-collapse" id="searchNavbar">
+		            <form class="form-inline" th:action="@{/search}" method="get" >
+		                <input type="search" class="form-control mr-sm-2" name="keyword" 
+		                       th:value="${keyword}" required placeholder="keyword" />
+		                <input type="submit" value="Search" class="btn btn-outline-success" />
+		            </form>
+	            </div>
+	        </nav>    
+        </div>    
+    </div>
     
     <div th:fragment="footer_menu">
         <div>
