--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -72,9 +72,17 @@
 
 					<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a></li>
 
-					<li class="nav-item" sec:authorize="hasAuthority('Admin')"><a
-						class="nav-link" th:href="@{/settings}">Settings</a></li>
-
+					<li class="nav-item dropdown" sec:authorize="hasAuthority('Admin')">
+					    <a class="nav-link dropdown-toggle" data-toggle="dropdown" th:href="@{/settings}">Settings</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" th:href="@{/settings#general}">General</a>
+							<a class="dropdown-item" th:href="@{/settings#countries}">Countries</a>
+							<a class="dropdown-item" th:href="@{/settings#states}">States</a>
+							<a class="dropdown-item" th:href="@{/settings#mailServer}">Mail Server</a>
+							<a class="dropdown-item" th:href="@{/settings#mailTemplate}">Mail Templates</a>
+							<a class="dropdown-item" th:href="@{/settings#payment}">Payment</a>
+						</div>
+					</li>	
 					<li><span class="fas fa-user fa-2x icon-silver"></span></li>
 
 					<li class="nav-item dropdown">
