--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/countries.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/countries.html
@@ -13,21 +13,24 @@
         <div>
             <select class="form-control m-2" id="dropDownCountries" style="height: 300px" size="3"></select>
         </div>
-        <div class="form-group row ml-2">
-            <label class="col-form-label mt-2" id="labelCountryName">Country Name:</label>
-            <div class="col-md">
-                <input type="text" class="form-control mt-2" id="fieldCountryName" />
-            </div>
-            <label class="col-form-label mt-2">Code:</label>
-            <div class="col-md">
-                <input type="text" class="form-control mt-2" id="fieldCountryCode" />
-            </div>
-            <div class="col-lg-4 mt-2">
-                <input type="button" id="buttonAddCountry" value="New" class="btn btn-secondary mr-2" />
-                <input type="button" id="buttonUpdateCountry" value="Update" class="btn btn-secondary mr-2" disabled="disabled" />
-                <input type="button" id="buttonDeleteCountry" value="Delete" class="btn btn-secondary mr-2" disabled="disabled" />
-            </div>
-        </div>
+        
+        <form id="formCountry">
+	        <div class="form-group row ml-2">
+	            <label class="col-form-label mt-2" id="labelCountryName">Country Name:</label>
+	            <div class="col-md">
+	                <input type="text" class="form-control mt-2" id="fieldCountryName" required maxlength="45" minlength="3" />
+	            </div>
+	            <label class="col-form-label mt-2">Code:</label>
+	            <div class="col-md">
+	                <input type="text" class="form-control mt-2" id="fieldCountryCode" required maxlength="3" minlength="2" />
+	            </div>
+	            <div class="col-lg-4 mt-2">
+	                <input type="button" id="buttonAddCountry" value="New" class="btn btn-secondary mr-2" />
+	                <input type="button" id="buttonUpdateCountry" value="Update" class="btn btn-secondary mr-2" disabled="disabled" />
+	                <input type="button" id="buttonDeleteCountry" value="Delete" class="btn btn-secondary mr-2" disabled="disabled" />
+	            </div>
+	        </div>
+        </form>
     </div>
 </body>
 </html>
