--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -20,24 +20,26 @@
 <body>
     
     <!-- sort theo fields and filter -->
-	<th th:fragment="column_link(moduleURL, fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
+	<th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
 	    <a class="text-white" 
 	       th:href="@{${moduleURL} + '/page/' + ${currentPage} 
 	                            + '?sortField=' + ${fieldName} 
 	                            + '&sortDir=' + ${sortField != fieldName ? sortDir : reverseSortDir}
 	                            + ${keyword != null ? '&keyword=' + keyword : ''}
-	                            + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">[[${columnLabel}]] 
+	                            + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">
+	    [[${columnLabel}]] 
 		</a> 
 		<span th:if="${sortField == fieldName}" th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 	</th>
 	
 	<!-- trang hiện tại trong pagination -->
-    <a th:fragment="page_link(moduleURL, pageNum, label)"
+    <a th:fragment="page_link(pageNum, label)"
 		class="page-link" 
 		th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} 
 		                                                + '&sortDir=' + ${sortDir} 
 		                                                + ${keyword != null ? '&keyword=' + keyword : ''}
-		                                                + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">[[${label}]]
+		                                                + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">
+	[[${label}]]
     </a>
 
     <div th:fragment="user_photos" th:remove="tag">
@@ -73,7 +75,7 @@
 		</th:block>	
 	</div>
 
-	<div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
+	<div th:fragment="pagination(entityName)" th:remove="tag">
 		<div class="text-center m-1" th:if="${totalItems > 0}">
 			<span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
 		</div>
@@ -87,39 +89,39 @@
 				<ul class="pagination justify-content-center flex-wrap">
 					<li
 						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-						<a th:replace="fragments :: page_link(${moduleURL}, 1, 'First')"></a>
+						<a th:replace="fragments :: page_link(1, 'First')"></a>
 					</li>
 					<li
 						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
 						<a
-						th:replace="fragments :: page_link(${moduleURL}, ${currentPage - 1}, 'Previous')"></a>
+						th:replace="fragments :: page_link(${currentPage - 1}, 'Previous')"></a>
 					</li>
 
 					<li
 						th:class="${currentPage != i ? 'page-item': 'page-item active'}"
 						th:each="i : ${#numbers.sequence(1, totalPages)}"><a
-						th:replace="fragments :: page_link(${moduleURL}, ${i}, ${i})"></a></li>
+						th:replace="fragments :: page_link(${i}, ${i})"></a></li>
 
 					<li
 						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-						<a th:replace="fragments :: page_link(${moduleURL}, ${currentPage + 1}, 'Next')"></a>
+						<a th:replace="fragments :: page_link(${currentPage + 1}, 'Next')"></a>
 					</li>
 
 					<li
 						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-						<a th:replace="fragments :: page_link(${moduleURL}, ${totalPages}, 'Last')"></a>
+						<a th:replace="fragments :: page_link(${totalPages}, 'Last')"></a>
 					</li>
 				</ul>
 			</nav>
 		</div>
 	</div>
 
-    <div th:fragment = "search_form_and_message(moduleURL)">
-	     <form th:action="@{${moduleURL}}" class="form-inline m-3">
+    <div th:fragment = "search_form_and_message()">
+	     <form th:action="@{${moduleURL} + '/page/1'}" class="form-inline m-3">
 	          <input type="hidden" name="sortField" th:value="${sortField}" />
 	          <input type="hidden" name="sortDir" th:value="${sortDir}" />
 	          Filter:&nbsp;
-	          <input type="search" name="keyword" th:value="${keyword}" class="form-control" required="required" />
+	          <input type="search" name="keyword" th:value="${keyword}" class="form-control" required />
 	          &nbsp;&nbsp;
 	          <button type="submit" class="btn btn-primary"><i class="fas fa-search"></i></button>
 	          &nbsp;&nbsp;
