--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -19,23 +19,23 @@
 		<a th:href="@{/users/export/pdf}" class="fas fa-file-pdf fa-2x icon-dark"></a>
 	</div>
 	
-	<div th:replace="fragments :: search_form_and_message('/users/page/1')"></div>
+	<div th:replace="fragments :: search_form_and_message"></div>
 	
 	<div class="full-details">
 	    <table class="table table-bordered table-striped table-hover table-reponsive-xl">
 	         <thead class="thead-dark">
 	             <tr>
 	                  <th class="hideable-column">
-	                      <th th:replace="fragments :: column_link('/users', 'id', 'User ID', 'tag')"></th>
+	                      <th th:replace="fragments :: column_link('id', 'User ID', 'tag')"></th>
 	                  </th>
 	                  <th>Photos</th>
 	                  <th class="hideable-column">
-	                     <th th:replace="fragments :: column_link('/users', 'email', 'E-Mail', 'tag')"></th>
+	                     <th th:replace="fragments :: column_link('email', 'E-Mail', 'tag')"></th>
 	                  </th>
-	                  <th th:replace="fragments :: column_link('/users', 'firstName', 'First Name', 'none')"></th>
-	                  <th th:replace="fragments :: column_link('/users', 'lastName', 'Last Name', 'none')"></th>
+	                  <th th:replace="fragments :: column_link('firstName', 'First Name', 'none')"></th>
+	                  <th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')"></th>
 	                  <th>Roles</th>
-	                  <th th:replace="fragments :: column_link('/users', 'enabled', 'Enabled', 'none')"></th>
+	                  <th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')"></th>
 	                  <th>Action</th>
 	             </tr>
 	         </thead>
@@ -83,7 +83,7 @@
 		</div>
 	</div>
 	
-	<div th:replace="fragments :: pagination('/users', 'users')"></div>
+	<div th:replace="fragments :: pagination('users')"></div>
 	
 	<div th:replace="modal_fragments :: confirm_modal"></div>
 	
