--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -8,40 +8,58 @@
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Product Name:</label>
          <div class="col-sm-10">
-             <!-- biểu thức ${#authorization.expression('hasAuthority(''Salesperson'')')} sẽ trả về true nếu user hiện tại có rule là Salesperson -->
-             <input type="text" class="form-control" th:field="*{name}" 
-                    th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')')}"
-                    required minlength="3" maxlength="256" />
+             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+		             <input type="text" class="form-control" th:field="*{name}" readonly="readonly" />
+		         </th:block>
+		     </th:block>   
+		     
+		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+		         <input type="text" class="form-control" th:field="*{name}" minlength="3" maxlength="256" required />
+		     </th:block>
          </div>
      </div>
+     
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Alias:</label>
          <div class="col-sm-10">
-             <input type="text" class="form-control" th:field="*{alias}" 
-                    th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')')}"
-                    minlength="3" maxlength="256" placeholder="Default is product name (spaces are replaced by dashes)" />
+             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+		             <input type="text" class="form-control" th:field="*{alias}" readonly="readonly"
+		                    placeholder="Default is product name (spaces are replaced by dashes)" />
+		         </th:block>           
+		     </th:block>    
+		     
+		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+		         <input type="text" class="form-control" th:field="*{alias}" minlength="3" maxlength="256" 
+		                placeholder="Default is product name (spaces are replaced by dashes)" />
+		     </th:block>
          </div>
      </div>
+     
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Brand:</label>
          <div class="col-sm-10">
-             <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+             <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
 	             <select th:field="*{brand}" class="form-control" required="required">
 	                 <th:block th:each="brand : ${listBrands}">
 	                     <option th:value="${brand.id}">[[${brand.name}]]</option>    
 	                 </th:block>
 	             </select>
              </th:block>
-             <th:block sec:authorize="hasAuthority('Salesperson')">
-                 <input type="text" class="form-control" th:value="${product.brand.name}" readonly />
+             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                     <input type="text" class="form-control" th:value="${product.brand.name}" readonly />
+                 </th:block>    
              </th:block>
          </div>
      </div>
+     
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Category:</label>
          <div class="col-sm-10">
              <!-- edit mode -->
-             <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+             <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
 	             <th:block th:if="${product.category != null}">
 	                 <select th:field="*{category}" class="form-control" required="required">
 	                     <th:block th:each="category : ${product.brand.categories}">
@@ -56,41 +74,65 @@
 	                 </select>
 	             </th:block>
              </th:block>
-             <th:block sec:authorize="hasAuthority('Salesperson')">
-                 <input type="text" class="form-control" th:value="${product.category.name}" readonly />
+            <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                     <input type="text" class="form-control" th:value="${product.category.name}" readonly />
+                 </th:block>    
              </th:block>
          </div>
      </div>
+     
 	 <div class="form-group row">
 	     <label class="col-sm-2 col-form-label">Enabled:</label>
 		 <div class="col-sm-10">
-		     <input type="checkbox" th:field="*{enabled}" th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')')}" />
+		     <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+		             <input type="checkbox" th:field="*{enabled}" disabled="disabled" />
+		         </th:block>
+		     </th:block>       
+		     
+		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}"> 
+		         <input type="checkbox" th:field="*{enabled}" />
+		     </th:block>
 		 </div>
 	 </div>
+	 
 	 <div class="form-group row">
 	     <label class="col-sm-2 col-form-label">In Stock:</label>
 		 <div class="col-sm-10">
-		     <input type="checkbox" th:field="*{inStock}" th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')')}" />
+		     <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+		             <input type="checkbox" th:field="*{inStock}" disabled="disabled" />
+		         </th:block>
+		     </th:block>
+		     
+		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}"> 
+		         <input type="checkbox" th:field="*{inStock}" />
+		     </th:block>        
 		 </div>
 	 </div>
+	 
 	 <div class="form-group row">
          <label class="col-sm-2 col-form-label">Cost:</label>
          <div class="col-sm-10">
              <input type="number" step="0.01" class="form-control" th:field="*{cost}" />
          </div>
      </div>
+     
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">List Price:</label>
          <div class="col-sm-10">
              <input type="number" step="0.01" class="form-control" th:field="*{price}" />
          </div>
      </div>
+     
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Discount:</label>
          <div class="col-sm-10">
              <input type="number" step="0.01" class="form-control" th:field="*{discountPercent}" />
          </div>
      </div>
+     
 </div>
 
 </body>
