code cutomer login and logout, code update authentication type of customer using enum,...

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customers.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customers.html
@@ -10,7 +10,7 @@
 		<a th:href="@{/customers/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-2"></a>
 	</div>
 		
-	<div th:replace="fragments :: search_form_and_message"></div>
+	<div th:replace="fragments :: search_form_and_message" />
 	
 	<div class="full-details">
 		<table class="table table-bordered table-striped table-hover table-responsive-xl">
