--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -22,7 +22,7 @@
 					    <a class="nav-link" href="">Shipping &amp; Delivery</a>
 					</li>
 					<li class="nav-item">
-					    <a class="nav-link" href="">Login</a>
+					    <a class="nav-link" th:href="@{/login}">Login</a>
 					</li>
 					<li class="nav-item">
 					    <a class="nav-link" th:href="@{/register}">Register</a>
@@ -37,15 +37,58 @@
     
     <div th:fragment="search_nav" class="row">
         <div class="col-md">
+        
+	        <th:block sec:authorize="isAuthenticated()">	
+				<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+					<input type="submit" value="Logout" />
+				</form>
+			</th:block>
+        
             <nav class="navbar navbar-expand-sm bg-light">
                 <div class="collapse navbar-collapse" id="searchNavbar">
+                
 		            <form class="form-inline" th:action="@{/search}" method="get" >
 		                <input type="search" class="form-control mr-sm-2" name="keyword" 
 		                       th:value="${keyword}" required placeholder="keyword" />
 		                <input type="submit" value="Search" class="btn btn-outline-success" />
 		            </form>
+		            
+		            <ul class="navbar-nav">						
+						<th:block sec:authorize="isAuthenticated()">
+						<li class="nav-item">
+							<b>
+							<a class="nav-link" th:href="@{/customer}" sec:authentication="principal.fullname"></a>
+						    </b>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{/address_book}">Address</a>
+						</li>
+											
+						<li class="nav-item">
+							<a class="nav-link" href="">Questions</a>
+						</li>
+																
+						<li class="nav-item">
+							<a class="nav-link" href="">Reviews</a>
+						</li>
+																					
+						<li class="nav-item">
+							<a class="nav-link" href="">Orders</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="">Cart</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="javascript: document.logoutForm.submit()">Logout</a>
+						</li>					
+						</th:block>						
+				    </ul>	
 	            </div>
-	        </nav>    
+	        </nav>  
+	          
         </div>    
     </div>
     
