--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customers/account_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customers/account_form.html
@@ -6,6 +6,8 @@
 <body>
     <div class="container-fluid">
         <div th:replace="navigation :: header_menu"></div>
+        <div th:replace="navigation :: search_nav"></div>
+        <div>&nbsp;</div>
         
         <div class="text-center mt-3">
             <h2>Your Account Details</h2>
