--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -55,17 +55,20 @@
 							</div>
 						</li>
 					</th:block>
-
-					<li class="nav-item"><a class="nav-link"
-						th:href="@{/customers}">Customers</a></li>
-
-					<li class="nav-item"><a class="nav-link"
-						th:href="@{/shipping}">Shipping</a></li>
-
+                    
+                    <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+						<li class="nav-item"><a class="nav-link"
+							th:href="@{/customers}">Customers</a>
+						</li>
+	
+						<li class="nav-item"><a class="nav-link"
+							th:href="@{/shipping_rates}">Shipping Rates</a>
+						</li>
+                    </th:block>
+                    
 					<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
 
-					<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
-							Report</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales Report</a></li>
 
 					<li class="nav-item"><a class="nav-link"
 						th:href="@{/articles}">Articles</a></li>
