--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -66,7 +66,11 @@
 						</li>
                     </th:block>
                     
-					<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
+                    <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Shipper')">
+						<li class="nav-item">
+						    <a class="nav-link" th:href="@{/orders}">Orders</a>
+						</li>
+					</th:block>
 
 					<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales Report</a></li>
 
