--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
@@ -55,7 +55,24 @@
                     <span th:if="${CURRENCY_SYMBOL_POSITION == 'Before price'}" th:remove="tag">[[${CURRENCY_SYMBOL}]]</span><span id="total" class="h2">[[${#numbers.formatDecimal(estimatedTotal, 1, THOUSANDS_POINT_TYPE, DECIMAL_DIGITS, DECIMAL_POINT_TYPE)}]]</span><span th:if="${CURRENCY_SYMBOL_POSITION == 'After price'}" th:remove="tag">[[${CURRENCY_SYMBOL}]]</span>
                 </div>
                 <div class="mt-2">
-                    <button class="btn btn-danger p-3 mt-2">Check Out</button>
+                    <!-- TH1: có support address -->
+                    <div th:if="${shippingSupported}">
+                        <form th:action="@{/checkout}">
+                            <button class="btn btn-danger p-3 mt-2">Check Out</button>
+                        </form>
+                    </div>
+                    <!-- TH2: không support address -->
+                    <div th:unless="${shippingSupported}">
+                        <div><span class="h5 text-warning">No shipping available for your location</span></div>
+                        <!-- có 2 options là update lại address ở trang account_details(nếu là primary address default là của customer) 
+                             or chọn 1 shipping address khác ở trang address_book -->
+                        <div th:if="${usePrimaryAddressAsDefault}">
+                            <a th:href="@{/account_details(redirect=cart)}" class="h6">Update your address</a>
+                        </div>
+                        <div th:unless="${usePrimaryAddressAsDefault}">
+                            <a th:href="@{/address_book(redirect=cart)}" class="h6">Use another shipping address</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
