--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
@@ -15,6 +15,7 @@
         <form th:action="@{/address_book/save}" method="post" th:object="${address}" style="max-width: 600px; margin: 0 auto">
             <input type="hidden" th:field="${address.id}" />
             <input type="hidden" th:field="${address.defaultForShipping}" />
+            <input type="hidden" name="redirect" th:value="${param.redirect}" />
             
             <div class="border border-secondary rounded p-3">
                 <div class="form-group row">
