--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/mail_templates/mail_templates.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/mail_templates/mail_templates.html
@@ -21,7 +21,7 @@
 					</div>
 					
 					<div class="tab-pane p-3" id="orderConfirmation" role="tabpanel">
-					    
+					    <div th:replace="settings/mail_templates/order_confirmation :: content"></div>
 					</div>
 				</div>
 			</div>
