--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
@@ -9,9 +9,15 @@
         <div th:replace="navigation :: search_nav"></div>
         
         <div class="text-center">
-            <div><h2>Your Address Book</h2></div>
             <div>
-                <h2><a th:href="@{/address_book/new}">Add New Address</a></h2>
+                <h2 th:text="${param.redirect != null && param.redirect[0] == 'checkout'} ? 'Choose a Shipping Address' : 'Your Address Book'">
+                </h2>
+            </div>
+            <div>
+                <h2><a th:unless="${param.redirect}" th:href="@{/address_book/new}">Add New Address</a></h2>
+                <h2><a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+                       th:href="@{/address_book/new(redirect=checkout)}">Add New Address</a>
+                </h2>
             </div>
         </div>    
         
@@ -25,20 +31,35 @@
                         <div class="row">
                             <div class="col">
                                 <b>Your Primary Address</b>
+                                
+                                <!--  -->
 								<th:block th:if="${usePrimaryAddressAsDefault}">
-									<span class="text-danger">[Default]</span>
+									<span class="text-danger" 
+									      th:text="${param.redirect != null && param.redirect[0] == 'checkout' ? '[Currently Selected]' : '[Default]'}">
+									</span>
 								</th:block>
 								
 								<th:block th:unless="${usePrimaryAddressAsDefault}">
 									<a th:unless="${param.redirect}" th:href="@{'/address_book/default/0'}">[Set as default]</a>
-									<a th:if="${param.redirect}" th:href="@{'/address_book/default/0?redirect=' + ${param.redirect}}">[Set as default]</a>
+									<a th:if="${param.redirect != null && param.redirect[0] == 'cart'}" 
+									   th:href="@{'/address_book/default/0?redirect=cart'}">[Set as default]
+									</a>
+									<a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+									   th:href="@{'/address_book/default/0?redirect=checkout'}">[Choose]
+									</a>
 								</th:block>
+								
 							</div>
                             <div class="col">
                                 <div class="float-right">
                                     <!-- khi edit primary address -> ta edit account detail của customer đó -->
-                                    <a class="fas fa-edit icon-dark" title="Edit your primary address"
+                                    <a th:unless="${param.redirect}"
+                                       class="fas fa-edit icon-dark" title="Edit your primary address"
                                        th:href="@{/account_details(redirect=address_book)}">
+                                    </a>
+                                    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}"
+                                       class="fas fa-edit icon-dark" title="Edit your primary address"
+                                       th:href="@{/account_details(redirect=checkout)}">
                                     </a>
                                 </div>
                             </div>
@@ -59,26 +80,41 @@
 	                            <div class="col">
 	                                <b>Address #[[${status.count + 1}]]</b>
 	                                
+	                                
 	                                <th:block th:if="${address.defaultForShipping}">
-	                                    <span class="text-danger">[Default]</span>
+	                                    <span class="text-danger"
+	                                          th:text="${param.redirect != null && param.redirect[0] == 'checkout' ? '[Currently Selected]' : '[Default]'}">
+	                                    </span>
 	                                </th:block>
+	                                
 	                                <th:block th:unless="${address.defaultForShipping}">
 	                                    <a th:unless="${param.redirect}" th:href="@{'/address_book/default/' + ${address.id}}">[Set as default]</a>
-	                                    <a th:if="${param.redirect}" th:href="@{'/address_book/default/' + ${address.id} + '?redirect=' + ${param.redirect}}">
-	                                        [Set as default]
+	                                    <a th:if="${param.redirect != null && param.redirect[0] == 'cart'}" 
+	                                       th:href="@{'/address_book/default/' + ${address.id} + '?redirect=cart'}">
+	                                       [Set as default]
+	                                    </a>
+	                                    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+	                                       th:href="@{'/address_book/default/' + ${address.id} + '?redirect=checkout'}">
+	                                       [Choose]
 	                                    </a>
 	                                </th:block>
 	                                
 	                            </div>
 	                            <div class="col">
 							        <div class="float-right">
-								        <a class="fas fa-edit icon-dark" title="Edit this address"
+								        <a th:unless="${param.redirect}"
+								           class="fas fa-edit icon-dark" title="Edit this address"
 									       th:href="@{'/address_book/edit/' + ${address.id}}">
 									    </a>
+									    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}"
+								           class="fas fa-edit icon-dark" title="Edit this address"
+									       th:href="@{'/address_book/edit/' + ${address.id} + '?redirect=checkout'}">
+									    </a>
 								        &nbsp;
-								        <a class="fas fa-trash icon-dark linkDelete" title="Delete this address"
-									        th:entityId="${address.id}"
-									        th:href="@{'/address_book/delete/' + ${address.id}}">
+								        <a 
+								           class="fas fa-trash icon-dark linkDelete" title="Delete this address"
+									       th:entityId="${address.id}"
+									       th:href="@{'/address_book/delete/' + ${address.id}}">
 									    </a>									
 							        </div>
 						        </div>		
